<resources>
    <!--Login-->
    <string name="login_welcome">Hi, there!\nWelcome to adab</string>
    <string name="login_input_credential">Before we move on,\n please input your credential below</string>
    <string name="button_letsgo">Let\'s Go</string>

    <!--Home-->
    <string name="app_name">adab</string>
    <string name="home_title"><b>BINUS</b> Adab</string>
    <string name="home_category_live">Live Now</string>
    <string name="home_category_all">All Classes</string>
    <string name="home_latest_title">Latest Class</string>
    <string name="home_latest_subtitle">See what classes you\'ve done so far</string>
    <string name="home_discussion_title">Discussion</string>
    <string name="home_discussion_subtitle">Discussion subtitle</string>
    <string name="home_next_class_title">Your Next Class</string>

    <!--Lecturer Home-->
    <string name="lecturer_home_next_schedule_title">Your Next Schedule</string>
    <string name="lecturer_home_next_schedule_subtitle">Never missed your class</string>
    <string name="lecturer_discussion_title">Discussion</string>
    <string name="lecturer_discussion_subtitle">See what you\'ve missing so far</string>

    <!--Lectures Course Detail-->
    <string name="lecturer_class_list_title">Class List</string>
    <string name="lecturer_class_list_subtitle">Never missed your class</string>
    <string name="button_start_class">Start This Class Now</string>

    <!--Topics-->
    <string name="topic_next_class">Next Class</string>
    <string name="topic_class_schedule">Class Schedule</string>

    <!--Toolbar-->
    <string name="toolbar_all_classes">All Classes</string>
    <string name="toolbar_topics">Topics</string>
    <string name="toolbar_calendar">Calendar</string>
    <string name="toolbar_discussion">Discussion</string>
    <string name="toolbar_help">Help</string>
    <string name="toolbar_settings">Settings</string>
    <string name="live_class_transcribe">Live Transcribe</string>
    <string name="class_transcribe_history">Transcribe History</string>

    <!--Place Holder-->
    <string name="placeholder_date">00:00</string>
    <string name="placeholder_title">Embedded System and Internet of Things</string>
    <string name="placeholder_subtitle">Subtitle</string>

    <!--Welcome-->
    <string name="welcome_title">Welcome back, %1s!</string>
    <string name="welcome_subtitle">We are happy to see you back</string>

    <!--Tag in all classes fragment-->
    <string name="tag_live_now">Live Now</string>
    <string name="tag_lastest_class">Latest Class</string>

    <!--Navigation Drawer-->
    <string name="nav_head_build">Dev build 09.19</string>

    <string name="nav_home">Home</string>
    <string name="nav_topics">Topics</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_discussion">Discussion</string>
    <string name="nav_help">Help</string>
    <string name="nav_setting">Settings</string>

    <!--Other-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_nim_invalid">Username format invalid</string>
    <string name="error_password_invalid">Please enter password</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="username_or_password_invalid">Username or password is wrong.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="session_expired">Session expired, please log in again.</string>
    <string name="action_logout">Logout</string>
    <string name="class_session">Session </string>
    <string name="how_to_use">How to use</string>
    <string name="about">About</string>
    <string name="need_help_ask_us_here">Need Help? Ask us here!</string>


    <!--See All Button-->
    <string name="see_all">See All</string>
    <string name="loading_getting_content">Getting content...</string>
    <string name="show_account_details">Show account details</string>
    <string name="logout_body_message">All your edited notes remain synced to your account if you sign out.</string>

    <!--Calendar-->
    <string name="no_class_today">No class at the selected day</string>

    <!--Error Fragment-->
    <string name="error_fragment_title">This Feature Will Be Available Soon</string>
    <string name="error_fragment_subtitle">Our developers are currently working so hard to make sure everything works perfectly</string>

    <!-- Student Next Class Activity-->
    <string name="your_next_class">Your Next Class</string>

    <!-- Lastest Class Activity-->
    <string name="latest_class">Latest Class</string>

    <!-- Lecturer Next Schedule Activity-->
    <string name="your_next_schedule">Your Next Schedule</string>

    <!--Dialog-->
    <string name="dialog_pause_session_question">Do you want to pause this session?</string>
    <string name="dialog_end_session_question">Do you want to end this session?</string>
    <string name="save_text">Save</string>
    <string name="font_size_text">Font Size</string>
    <string name="font_style_text">Font Style</string>
    <string name="high_contrast_text">High Contrast</string>

    <!--Font Name-->
    <string-array name="typeface_types">
        <item>Default</item>
        <item>OpenDyslexic</item>
    </string-array>
</resources>
