<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:id="@+id/classIcon"
                android:src="@drawable/ic_launcher_background"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_date"
                    android:textSize="@dimen/text_body"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/tv_classTime"/>
                <TextView
                    android:layout_below="@id/tv_classTime"
                    android:textSize="@dimen/text_caption"
                    android:textStyle="bold"
                    android:textColor="@color/textColorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_title"

                    android:id="@+id/tv_classTitle"/>
                <TextView
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_subtitle"
                    android:id="@+id/tv_courses"
                    android:layout_below
                        ="@id/tv_classTitle" />
                <TextView
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_subtitle"
                    android:layout_below="@id/tv_courses"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/tv_classMeeting"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!--<com.google.android.material.chip.ChipGroup-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<com.google.android.material.chip.Chip-->
                        <!--android:id="@+id/chip_coursesCode"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:fontFamily="@font/interstate"-->
                        <!--android:text="Test"-->
                        <!--app:chipBackgroundColor="#ffffff"-->
                        <!--app:chipStrokeColor="#E1E1E1"-->
                        <!--app:chipStrokeWidth="1dp" />-->

                    <!--<com.google.android.material.chip.Chip-->
                        <!--android:id="@+id/chip_classCode"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:fontFamily="@font/interstate"-->
                        <!--android:text="Test1" />-->

                    <!--<com.google.android.material.chip.Chip-->
                        <!--android:id="@+id/chip_classType"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:fontFamily="@font/interstate"-->
                        <!--android:text="Test2" />-->
                <!--</com.google.android.material.chip.ChipGroup>-->
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>