<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.lecturer.coursedetail.CourseDetail">

    <LinearLayout
        android:id="@+id/liveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">
        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/liveClassIcon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_courseDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_caption"
                android:textStyle="bold"
                tools:text="Mobile Object Oriented Programming" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tv_courseDetailNextClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Mobile Creative Design" />

            <TextView
                android:id="@+id/tv_courseDetailRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Session 12" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    tools:src="@tools:sample/avatars" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_caption"
                    android:textStyle="bold"
                    tools:text="Mobile Object Oriented Programming" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Mobile Creative Design" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Session 12" />
            </LinearLayout>
           
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />
    <com.ambinusian.adab.customcomponent.SectionView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:sectionTitle="@string/home_latest_title"
        app:sectionSubtitle="@string/home_latest_subtitle"/>

    <com.ambinusian.adab.customcomponent.Tag
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:tagText="@string/button_start_class"></com.ambinusian.adab.customcomponent.Tag>
</LinearLayout>